--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZeroUi-Vue",
+  "name": "Zero-ui",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "vite": "^1.0.0-rc.3"
+    "node-sass": "^4.9.2",
+    "sass": "1.26.11",
+    "sass-loader": "^8.0.2",
+    "vite": "^1.0.0-rc.1"
   }
 }
