--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "zero-ui-1",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "files": [
     "dist/lib/*"
   ],
-  "main": "dist/lib/gulu.js",
-  "module": "dist/lib/gulu.esm.js",
+  "main": "dist/lib/zero.js",
+  "module": "dist/lib/zero.esm.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -14,13 +14,13 @@
     "node-sass": "npm:sass@1.26.11"
   },
   "dependencies": {
+    "vue": "3.0.0"
+  },
+  "devDependencies": {
+    "vue-router": "4.0.0-beta.3",
     "github-markdown-css": "4.0.0",
     "marked": "1.1.1",
     "prismjs": "1.21.0",
-    "vue": "3.0.0",
-    "vue-router": "4.0.0-beta.3"
-  },
-  "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
     "rollup-plugin-esbuild": "2.5.0",
     "rollup-plugin-scss": "2.6.0",
